--- a/styles/index.css
+++ b/styles/index.css
@@ -1,15 +1,38 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-@layer utilities {
-  .x-separator {
-    width: 2px;
-    background-color: #cbcfcb;
-  }
+nav {
+  transition: width 300ms ease-in-out;
+}
+nav button:not(.theme-switch) {
+  width: 100%;
+}
+nav button:not(.theme-switch) svg {
+  min-width: 24px;
+  width: 24px;
+  margin-left: 12px;
+}
+nav button:not(.theme-switch) .title {
+  margin-left: 1rem;
+  opacity: 0;
+  transition: opacity 100m ease-in-out;
+}
 
-  .background {
-    background-image: url("../public/background.jpg");
-    background-position: center;
-    background-size: cover;
-  }
+nav:hover button {
+  width: 100%;
+}
+nav:hover button svg {
+  min-width: 24px;
+  width: fit-content;
+}
+nav:hover button .title {
+  opacity: 1;
+}
+
+.x-separator {
+  width: 2px;
+  background-color: #cbcfcb;
+}
+
+.background {
+  background-image: url("../public/background.jpg");
+  background-position: center;
+  background-size: cover;
 }
